--- a/M-Auto/index.html
+++ b/M-Auto/index.html
@@ -116,7 +116,7 @@
 								</div> -->
 
 								<!-- Video -->
-								<video autoplay muted loop>
+								<video autoplay muted loop playsinline>
 									<source src="video/1.mp4" type="video/mp4">
 								</video>
 							</div>
@@ -129,7 +129,7 @@
 								</div> -->
 
 								<!-- Video -->
-								<video autoplay muted loop>
+								<video autoplay muted loop playsinline>
 									<source src="video/2.mp4" type="video/mp4">
 								</video>
 							</div>
@@ -142,8 +142,8 @@
 								</div> -->
 
 								<!-- Video -->
-								<video autoplay muted loop>
-									<source src="video/1.mp4" type="video/mp4">
+								<video autoplay muted loop playsinline>
+									<source src="video/3.mp4" type="video/mp4">
 								</video>
 							</div>
 						</div>
@@ -177,7 +177,7 @@
 
 						<!-- Button -->
 						<button class="about-advantage-btn">
-							<svg viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<svg viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
 								<path d="M13.4403 0.972409C13.4403 0.435376 13.0049 2.59823e-05 12.4679 2.65513e-05H3.71646C3.17943 2.65513e-05 2.74407 0.435377 2.74407 0.972409C2.74407 1.50944 3.17943 1.94479 3.71646 1.94479H11.4955V9.72385C11.4955 10.2609 11.9309 10.6962 12.4679 10.6962C13.0049 10.6962 13.4403 10.2609 13.4403 9.72385V0.972409ZM0.6875 12.7528L1.37508 13.4404L13.1555 1.65999L12.4679 0.972409L11.7803 0.284831L-7.81957e-05 12.0652L0.6875 12.7528Z" fill="white"/>
 							</svg>
 						</button>
@@ -196,7 +196,7 @@
 
 						<!-- Button -->
 						<button class="about-advantage-btn">
-							<svg viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<svg viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
 								<path d="M13.4403 0.972409C13.4403 0.435376 13.0049 2.59823e-05 12.4679 2.65513e-05H3.71646C3.17943 2.65513e-05 2.74407 0.435377 2.74407 0.972409C2.74407 1.50944 3.17943 1.94479 3.71646 1.94479H11.4955V9.72385C11.4955 10.2609 11.9309 10.6962 12.4679 10.6962C13.0049 10.6962 13.4403 10.2609 13.4403 9.72385V0.972409ZM0.6875 12.7528L1.37508 13.4404L13.1555 1.65999L12.4679 0.972409L11.7803 0.284831L-7.81957e-05 12.0652L0.6875 12.7528Z" fill="white"/>
 							</svg>
 						</button>
@@ -215,7 +215,7 @@
 
 						<!-- Button -->
 						<button class="about-advantage-btn">
-							<svg viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<svg viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
 								<path d="M13.4403 0.972409C13.4403 0.435376 13.0049 2.59823e-05 12.4679 2.65513e-05H3.71646C3.17943 2.65513e-05 2.74407 0.435377 2.74407 0.972409C2.74407 1.50944 3.17943 1.94479 3.71646 1.94479H11.4955V9.72385C11.4955 10.2609 11.9309 10.6962 12.4679 10.6962C13.0049 10.6962 13.4403 10.2609 13.4403 9.72385V0.972409ZM0.6875 12.7528L1.37508 13.4404L13.1555 1.65999L12.4679 0.972409L11.7803 0.284831L-7.81957e-05 12.0652L0.6875 12.7528Z" fill="white"/>
 							</svg>
 						</button>
@@ -226,6 +226,7 @@
 				</div>
 			</div>
 
+			<!-- Image -->
 			<div class="about-img" data-aos="fade-right">
 				<img src="img/about.webp" alt="О нас">
 			</div>
@@ -649,6 +650,12 @@
 			<span class="work-schedule">
 				Без выходных: 08:00 - 23:00
 			</span>
+
+			<!-- Mail -->
+			<a href="mailto: mikelb@mail.ru" class="mail">mikelb@mail.ru</a>
+
+			<!-- Address -->
+			<span class="address">192102, СПб, Салова ул., 52Б</span>
 		</div>
 	</nav>
 
