--- a/M-Auto/index.html
+++ b/M-Auto/index.html
@@ -81,7 +81,7 @@
 					<p class="start-banner-text" data-aos="fade-left">Работаем с Audi, Porsche, Lamborghini, Bentley, VW Touareg и другими марками авто</p>
 
 					<!-- Button -->
-					<a href="#" class="btn start-banner-btn">
+					<a href="#contact" class="btn start-banner-btn">
 						<!-- Flare -->
 						<img src="img/flare3.png" class="btn-flare" alt="Flare">
 
@@ -177,8 +177,8 @@
 
 						<!-- Button -->
 						<button class="about-advantage-btn">
-							<svg viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
-								<path d="M13.4403 0.972409C13.4403 0.435376 13.0049 2.59823e-05 12.4679 2.65513e-05H3.71646C3.17943 2.65513e-05 2.74407 0.435377 2.74407 0.972409C2.74407 1.50944 3.17943 1.94479 3.71646 1.94479H11.4955V9.72385C11.4955 10.2609 11.9309 10.6962 12.4679 10.6962C13.0049 10.6962 13.4403 10.2609 13.4403 9.72385V0.972409ZM0.6875 12.7528L1.37508 13.4404L13.1555 1.65999L12.4679 0.972409L11.7803 0.284831L-7.81957e-05 12.0652L0.6875 12.7528Z" fill="white"/>
+							<svg width="9" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
+								<path d="M13.4403 0.972409C13.4403 0.435376 13.0049 0 12.4679 0H3.71646C3.17943 0 2.74407 0.435377 2.74407 0.972409C2.74407 1.50944 3.17943 1.94479 3.71646 1.94479H11.4955V9.72385C11.4955 10.2609 11.9309 10.6962 12.4679 10.6962C13.0049 10.6962 13.4403 10.2609 13.4403 9.72385V0.972409ZM0.6875 12.7528L1.37508 13.4404L13.1555 1.65999L12.4679 0.972409L11.7803 0.284831L0 12.0652L0.6875 12.7528Z" fill="white"></path>
 							</svg>
 						</button>
 					</div>
@@ -196,8 +196,8 @@
 
 						<!-- Button -->
 						<button class="about-advantage-btn">
-							<svg viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
-								<path d="M13.4403 0.972409C13.4403 0.435376 13.0049 2.59823e-05 12.4679 2.65513e-05H3.71646C3.17943 2.65513e-05 2.74407 0.435377 2.74407 0.972409C2.74407 1.50944 3.17943 1.94479 3.71646 1.94479H11.4955V9.72385C11.4955 10.2609 11.9309 10.6962 12.4679 10.6962C13.0049 10.6962 13.4403 10.2609 13.4403 9.72385V0.972409ZM0.6875 12.7528L1.37508 13.4404L13.1555 1.65999L12.4679 0.972409L11.7803 0.284831L-7.81957e-05 12.0652L0.6875 12.7528Z" fill="white"/>
+							<svg width="9" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
+								<path d="M13.4403 0.972409C13.4403 0.435376 13.0049 0 12.4679 0H3.71646C3.17943 0 2.74407 0.435377 2.74407 0.972409C2.74407 1.50944 3.17943 1.94479 3.71646 1.94479H11.4955V9.72385C11.4955 10.2609 11.9309 10.6962 12.4679 10.6962C13.0049 10.6962 13.4403 10.2609 13.4403 9.72385V0.972409ZM0.6875 12.7528L1.37508 13.4404L13.1555 1.65999L12.4679 0.972409L11.7803 0.284831L0 12.0652L0.6875 12.7528Z" fill="white"></path>
 							</svg>
 						</button>
 					</div>
@@ -215,8 +215,8 @@
 
 						<!-- Button -->
 						<button class="about-advantage-btn">
-							<svg viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
-								<path d="M13.4403 0.972409C13.4403 0.435376 13.0049 2.59823e-05 12.4679 2.65513e-05H3.71646C3.17943 2.65513e-05 2.74407 0.435377 2.74407 0.972409C2.74407 1.50944 3.17943 1.94479 3.71646 1.94479H11.4955V9.72385C11.4955 10.2609 11.9309 10.6962 12.4679 10.6962C13.0049 10.6962 13.4403 10.2609 13.4403 9.72385V0.972409ZM0.6875 12.7528L1.37508 13.4404L13.1555 1.65999L12.4679 0.972409L11.7803 0.284831L-7.81957e-05 12.0652L0.6875 12.7528Z" fill="white"/>
+							<svg width="9" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
+								<path d="M13.4403 0.972409C13.4403 0.435376 13.0049 0 12.4679 0H3.71646C3.17943 0 2.74407 0.435377 2.74407 0.972409C2.74407 1.50944 3.17943 1.94479 3.71646 1.94479H11.4955V9.72385C11.4955 10.2609 11.9309 10.6962 12.4679 10.6962C13.0049 10.6962 13.4403 10.2609 13.4403 9.72385V0.972409ZM0.6875 12.7528L1.37508 13.4404L13.1555 1.65999L12.4679 0.972409L11.7803 0.284831L0 12.0652L0.6875 12.7528Z" fill="white"></path>
 							</svg>
 						</button>
 					</div>
@@ -309,7 +309,7 @@
 			<!-- Row -->
 			<div class="d-flex justify-content-center w-100">
 				<!-- Button -->
-				<a href="#" class="btn services-btn">
+				<a href="#contact" class="btn services-btn">
 					<!-- Flare -->
 					<img src="img/flare3.png" class="btn-flare" alt="Flare">
 
@@ -630,6 +630,8 @@
 
 	<!-- Mobile navigation -->
 	<nav class="mobile-nav">
+		<button class="mobile-nav-close">x</button>
+
 		<!-- Menu -->
 		<menu class="mobile-nav-menu">
 			<li class="menu-item"><a href="#about">О компании</a></li>
