--- a/ParkTerminal/index.html
+++ b/ParkTerminal/index.html
@@ -6,7 +6,7 @@
     <title>Parking terminal</title>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
@@ -22,7 +22,7 @@
         <!-- Status -->
         <div class="status">
             <!-- Icon -->
-            <img src="/img/warning.svg" class="icon">
+            <img src="img/warning.svg" class="icon">
 
             <!-- Title -->
             <h1 class="title">
