--- a/ParkTerminal/index.html
+++ b/ParkTerminal/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
     <!-- Terminal -->
     <div class="terminal">
         <!-- Top -->
@@ -354,7 +353,7 @@
 
                         <!-- Row -->
                         <div class="d-flex" style="margin-top: 8px;">
-                            <button class="btn btn-filled" data-value="Есть">Вкл</button>
+                            <button class="btn" data-value="Есть">Вкл</button>
                             <button class="btn" data-value="Нет">Выкл</button>
                         </div>
                     </div>
